fixed media query white space issue

--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -4,19 +4,21 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  // background-color: rgba(0, 0, 0, 0.873);
-  // color: rgba(255, 255, 255, 0.452);
   padding: 50px;
-  font-family: Arial, Helvetica, sans-serif ;
+  font-family: Arial, Helvetica, sans-serif;
+
+  
 }
 
 .App img {
   // filter: invert(.873);
-  height: 30px;
+  height: 50px;
+  width: 50px;
   pointer-events: none;
   border-bottom: 1px solid black;
   border-radius: 5px;
   padding: 10px;
+  margin-bottom: 35px;
 }
 
 .App-logo {
@@ -25,12 +27,12 @@
 }
 
 .App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  // min-height: 100vh;
+  // display: flex;
+  // flex-direction: column;
+  // align-items: center;
+  // justify-content: center;
+  // font-size: calc(10px + 2vmin);
+  // color: white;
 }
 
