--- a/src/style/blog-post.scss
+++ b/src/style/blog-post.scss
@@ -1,5 +1,6 @@
 .blog-post-wrapper{
     padding-bottom: 20px;
+    width: auto;
 }
 .blog-post {
     display: flex;
@@ -10,7 +11,6 @@
     .attribute {
         // padding: 20px;
         text-align: center;
-        width: 90px;
         height: 180px;
     }
 }
