--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,6 +6,5 @@
 @import "./blog-post.scss";
 @import "./blog-page.scss";
 
-.button {
-    background-color: #33b5ff;
-}
+
+
