--- a/src/style/navbar.scss
+++ b/src/style/navbar.scss
@@ -20,13 +20,13 @@
         .navlink {
             text-decoration: none;
             color: black;
-            font-weight: 400;
+            font-weight: 300;
             font-size: 20px;
 
             &:hover {
-                color: rgb(112, 128, 144);
-                font-size: 22px;
-                transition: 0.12s;
+                color: rgb(79, 234, 255);
+                font-size: 21px;
+                transition: 1s;
             }
         }
 
